welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
var nbBiscuits:Int=0
^Poucet:6: error: ')' expected but 'if' found.
    if (estSurBiscuits()) {
    ^Poucet:8: error: ';' expected but ')' found.
    })
     ^